--- a/filestore/build.gradle
+++ b/filestore/build.gradle
@@ -29,6 +29,13 @@ dependencies {
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	runtimeOnly('com.h2database:h2')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile "io.springfox:springfox-swagger2:2.9.2"
 	compile "io.springfox:springfox-swagger-ui:2.9.2"
+}
+
+test {
+    testLogging {
+        showStandardStreams = true
+    }
 }
