--- a/filestore/.gitignore
+++ b/filestore/.gitignore
@@ -1,4 +1,4 @@
-.gradle
+.gradle/*
 /build/
 !gradle/wrapper/gradle-wrapper.jar
 
@@ -28,3 +28,6 @@
 /.nb-gradle/
 .vscode
 bin
+
+### project specific
+/store/
