--- a/filestore/build.gradle
+++ b/filestore/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile "io.springfox:springfox-swagger2:2.9.2"
 	compile "io.springfox:springfox-swagger-ui:2.9.2"
+	compileOnly "org.projectlombok:lombok:1.18.8"
 }
 
 docker {
