--- a/filestore/src/main/resources/application.yml
+++ b/filestore/src/main/resources/application.yml
@@ -1,10 +1,16 @@
 server:
     port: 9090
-
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8888/eureka
+      
 filestore:
     baseUrl: ./store
 
 spring:
+    application:
+        name: file-store
     datasource:
         url: jdbc:h2:mem:testdb  
         driverClassName: org.h2.Driver  
