avoid eureka client during test phase

--- a/filestore/build.gradle
+++ b/filestore/build.gradle
@@ -72,3 +72,8 @@ task buildDocker(type: Docker) {
 }
 
 buildDocker.dependsOn(build)
+
+// avoid starting eureka client during test phase
+tasks.withType(Test) {
+    systemProperty 'eureka.client.enabled', 'false'
+}
