--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'vilma_microservices'
-include 'discover', 'gateway', 'filestore'
+include 'discover', 'gateway', 'filestore', "core"
