--- a/core/build.gradle
+++ b/core/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 	compile "io.springfox:springfox-swagger2:2.9.2"
 	compile "io.springfox:springfox-swagger-ui:2.9.2"
 	compileOnly "org.projectlombok:lombok:1.18.8"
+	compile group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.6.0'
 }
 
 dependencyManagement {
