--- a/web-front/package.json
+++ b/web-front/package.json
@@ -40,6 +40,7 @@
     "pm2": "^3.5.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "regenerator-runtime": "^0.13.3",
     "sass-loader": "^8.0.0",
     "serialize-javascript": "^1.9.0",
