--- a/web-front/package.json
+++ b/web-front/package.json
@@ -23,7 +23,6 @@
   "dependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
@@ -40,6 +39,7 @@
     "pm2": "^3.5.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-hooks": "^1.0.1",
     "react-router-dom": "^5.0.1",
     "regenerator-runtime": "^0.13.3",
     "sass-loader": "^8.0.0",
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/node": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
